intro et conclu premier jet

--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -24,15 +24,17 @@ L'étude d'une architecture non hiérarchique de SOM est motivée par leur inspi
 Ensuite, l'étude des systèmes biologiques et la robotique peuvent être liées~: la biologie sert d'inspiration à la robotique, que ce soit pour le mouvement d'un bras ou la prise de décision, et la robotique permet de tester des théories cherchant à modéliser des comportements biologiques \parencite{Oudeyer2010OnTI}.
 Aussi, les architectures de cartes bio-inspirées que nous avons relevées dans la littérature se définissent des domaines soit de l'apprentissage automatique, soit des neurosciences computationnelles ou de l'apprentissage incarné en robotique (\emph{Embodied intelligence}) \parencite{Smith2005TheDO,cangelosi_embodied_2015}, à la frontière entre étude de la biologie et apprentissage automatique.
 
-Nous nous intéressons dans ce chapitre à un ensemble de travaux définissant des architectures de cartes auto-organisatrices, en s'intéressant aux différentes formes de modularité qu'elles implémentent.
-La notion d'architecture modulaire de cartes est d'ailleurs résumée par Kohonen dès 1995~:
-\begin{quote}
-Un objectif à long terme de l'auto-organisation est de créer des systèmes autonomes dont les éléments se contrôlent mutuellement et apprennent les uns des autres. De tels éléments de contrôle peuvent être implémentés par des SOMs spécifiques~; le problème principal est alors l'interface, en particulier la mise à l'échelle automatique des signaux d'interconnexion entre les modules et la collecte de signaux pertinents comme interface entre les modules. Nous laisserons cette idée aux recherches futures.
-Traduit de \cite{Kohonen1995SelfOrganizingM}
-\end{quote}
+Ce chapitre se veut une relecture d'un ensemble de travaux définissant des architectures de cartes auto-organisatrices, issues de plusieurs domaines de recherche, en s'intéressant aux différentes formes de modularité qu'elles implémentent.
+% La notion d'architecture modulaire de cartes est d'ailleurs résumée par Kohonen dès 1995~:
+% \begin{quote}
+% Un objectif à long terme de l'auto-organisation est de créer des systèmes autonomes dont les éléments se contrôlent mutuellement et apprennent les uns des autres. De tels éléments de contrôle peuvent être implémentés par des SOMs spécifiques~; le problème principal est alors l'interface, en particulier la mise à l'échelle automatique des signaux d'interconnexion entre les modules et la collecte de signaux pertinents comme interface entre les modules. Nous laisserons cette idée aux recherches futures.
+% Traduit de \cite{Kohonen1995SelfOrganizingM}
+% \end{quote}
 
-L'objectif de nos travaux est ainsi de proposer un modèle de carte qui puisse être utilisée en tant que module, de définir l'interface entre les modules afin de créer une architecture, puis de comprendre les comportements de calcul qui émergent de l'association des modules.
-Nous présentons dans ce chapitre le modèle général d'une carte de Kohonen et ses comportements fondamentaux, puis répertorions les différents types de structures se présentant comme des architectures de cartes. Nous pourrons ainsi définir en pratique la notion d'architecture modulaire et comment se placent nos travaux dans cette taxonomie.
+% L'objectif de nos travaux est ainsi de proposer un modèle de carte qui puisse être utilisée en tant que module, de définir l'interface entre les modules afin de créer une architecture, puis de comprendre les comportements de calcul qui émergent de l'association des modules.
+Nous présentons dans ce chapitre le modèle général d'une carte de Kohonen et ses comportements fondamentaux, puis répertorions les différents types de structures se présentant comme des architectures de cartes. 
+Nous nous attacherons en particulier à définir leurs structures et leurs règles d'apprentissage sous une forme unifiée, afin de mieux comparer les mécanismes de calcul présents dans ces architectures.
+Nous pourrons ainsi définir en pratique la notion d'architecture modulaire et comment se placent nos travaux dans cette taxonomie.
 
 \section{Les cartes auto-organisatrices de Kohonen comme modules d'une architecture}\label{sec:som001}
 
@@ -782,9 +784,9 @@ Par leur motivation, qui est le développement d'un système multi-cartes géné
 
 Nous dirigerons les travaux de cette thèse vers le traitement de données multimodales dans de petites architectures de deux et trois cartes. Le but de cette thèse est d'identifier et de formaliser les comportements d'apprentissage générés par une petite structure non hiérarchique et de développer une méthode expérimentale et des représentations adaptées du modèle, dans une optique de création d'architecture comportant de nombreuses cartes.
 
-\begin{figure*}[b]
-    \centering\includegraphics[width=0.5\textwidth]{lego2.jpg}
-\end{figure*}
+% \begin{figure*}[b]
+%     \centering\includegraphics[width=0.5\textwidth]{lego2.jpg}
+% \end{figure*}
 
 \ifSubfilesClassLoaded{
     \printbibliography
