--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1786,7 +1786,7 @@
 
 @book{nature_inspired_2020,
    title =     {Nature-inspired Computation and Swarm Intelligence: Algorithms, Theory and Applications},
-   author =    {Xin-She Yang (editor)},
+   author =    {Xin-She Yang},
    publisher = {Academic Pr},
    isbn =      {0128197145; 9780128197141},
    year =      {2020},
@@ -1903,3 +1903,27 @@
   number={1},
   pages={84-95},
   doi={10.1109/TCOM.1980.1094577}}
+
+
+@article{kohonen_essentials_2013,
+	title = {Essentials of the self-organizing map},
+	volume = {37},
+	issn = {0893-6080},
+	url = {https://www.sciencedirect.com/science/article/pii/S0893608012002596},
+	doi = {https://doi.org/10.1016/j.neunet.2012.09.018},
+	abstract = {The self-organizing map (SOM) is an automatic data-analysis method. It is widely applied to clustering problems and data exploration in industry, finance, natural sciences, and linguistics. The most extensive applications, exemplified in this paper, can be found in the management of massive textual databases and in bioinformatics. The SOM is related to the classical vector quantization (VQ), which is used extensively in digital signal processing and transmission. Like in VQ, the SOM represents a distribution of input data items using a finite set of models. In the SOM, however, these models are automatically associated with the nodes of a regular (usually two-dimensional) grid in an orderly fashion such that more similar models become automatically associated with nodes that are adjacent in the grid, whereas less similar models are situated farther away from each other in the grid. This organization, a kind of similarity diagram of the models, makes it possible to obtain an insight into the topographic relationships of data, especially of high-dimensional data items. If the data items belong to certain predetermined classes, the models (and the nodes) can be calibrated according to these classes. An unknown input item is then classified according to that node, the model of which is most similar with it in some metric used in the construction of the SOM. A new finding introduced in this paper is that an input item can even more accurately be represented by a linear mixture of a few best-matching models. This becomes possible by a least-squares fitting procedure where the coefficients in the linear mixture of models are constrained to nonnegative values.},
+	journal = {Neural Networks},
+	author = {Kohonen, Teuvo},
+	year = {2013},
+	keywords = {Brain map, Data analysis, Self-organizing map, Similarity, SOM, Vector quantization},
+	pages = {52--65},
+	annote = {Twenty-fifth Anniversay Commemorative Issue},
+}
+
+@article{Yamazaki2022SpikingNN,
+  title={Spiking Neural Networks and Their Applications: A Review},
+  author={Kashu Yamazaki and Viet-Khoa Vo-Ho and D Bulsara and Ngan T. H. Le},
+  journal={Brain Sciences},
+  year={2022},
+  volume={12}
+}
